# multilingual-patent-prior-art-rag-discovery-engine

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
src/ppa/: runner.py  types.py
src/ppa/bench/: metrics.py
src/ppa/cli/: main.py
src/ppa/data/: generate.py
src/ppa/llm/: llm_client.py
src/ppa/models/: retrievers.py
src/ppa/viz/: charts.py
tests/: test_data.py  test_metrics.py  test_models.py  test_runner.py
